
=== 1.1.1 (2018-06-06) ===
FIXED: crash Babel instanceof check issue

=== 1.1.0 (2018-06-03) ===
NEW: allow registration of additional events

=== 1.0.2 (2018-05-23) ===
FIXED: improved browser tests to use dist module

=== 1.0.1 (2018-05-10) ===
CHANGED: upgraded webpack to v4
NEW: Node.js v10 testing

=== 0.9.0 (2017-12-26) ===
Initial release
